# picoputer

./: README.md  grab.sh  picoputer  picoputer-eclipse
ard-link-monitor/ard-link-monitor/: ard-link-monitor.ino  minicom.cap  trace2.txt  trace3.txt  trace4.txt  tracea.txt
ardlink-server/: .#sizing_i_option_26_id_plusint_1.txt  .gitignore~  SIMPLE.BTL  ardlink-server  ardlink-server.c  ardlink-server.c~  boot.btl  hello.btl  hello2.bin~  m  output.txt~  output_hello_btl.txt~  simple.occ
picoputer/: #p.c.old#  .project  arithmetic.c  debug_wptr_fix.txt  e_remainder.c  fparithmetic.c  fparithmetic.h  fpiface.h  gettimeofday.c  gettimeofday.h  mac_input.c  mac_input.h.old  main.c~  oldt4main.c  picoputer.pio  picoputer1.c  redmath.h  s_ldexp.c  s_ldexpf.c  s_scalbnf.c  server.c.new  server.c.old  spi_ram.h  t4main.c  w_remainder.c
picoputer-eclipse/: .cproject  Makefile  pakgadget1.elf.map  pakgadget1.hex  pakgadget1.uf2  picoputer.pio.h  picoputer1.elf  picoputer1.elf.map  picoputer1.hex  picoputer1.uf2
picoputer-eclipse/elf2uf2/: .project  Makefile  cmake_install.cmake
picoputer-eclipse/pico-sdk/: Makefile  cmake_install.cmake
picoputer-eclipse/pico_extras/: cmake_install.cmake
picoputer-eclipse/picoputer1-eclipse/: .project  CMakeCache.txt  cmake_install.cmake  pakgadget1.dis  picoputer1.dis  picoputer1.elf  picoputer1.elf.map  picoputer1.hex  picoputer1.uf2
picoputer/picoputer1/picoputer1/: CMakeLists.txt  curterm.h  e_fmod.c  e_sqrt.c  k_standard.c  opcodes.h  picoputer1.c  processor.h.old  projects.sit.Hqx  s_scalbn.c  server.c  server.h.old  w_sqrt.c
(+217 files in other folders)
